--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.1",
+    "final-form": "^4.18.7",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-final-form-hooks": "^2.0.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.3",
@@ -43,6 +45,7 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
+    "svg-react-loader": "^0.4.6",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1"
   }
