--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.1",
     "final-form": "^4.18.7",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -23,8 +24,7 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^5.0.0",
-    "typeface-roboto": "0.0.75",
-    "webpack-cli": "^3.3.10"
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -47,6 +47,7 @@
     "style-loader": "^1.1.3",
     "svg-react-loader": "^0.4.6",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-cli": "^3.3.10"
   }
 }
