--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --config ./webpack.config.js",
+    "build": "./node_modules/webpack/bin/webpack.js -m production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --ext .jsx --fix"
+    "lint": "eslint src --ext .jsx --fix",
+    "ghpages": "git push origin `git subtree split --prefix dist master`:gh-pages --force"
   },
   "author": "",
   "license": "ISC",
@@ -47,7 +49,7 @@
     "style-loader": "^1.1.3",
     "svg-react-loader": "^0.4.6",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3"
   }
 }
