--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "webpack-dev-server --mode development --config ./webpack.config.js",
     "build": "./node_modules/webpack/bin/webpack.js -m production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --ext .jsx --fix",
-    "ghpages": "git push origin `git subtree split --prefix dist master`:gh-pages --force"
+    "lint": "eslint src --ext .jsx --fix"
   },
   "author": "",
   "license": "ISC",
