--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,6 @@
         "filenames"
     ],
     "rules": {
-        "filenames/match-exported": [2, "pascal"]
+        "filenames/match-exported": 2
     }
   }
