--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^5.0.0",
+    "styled-components-breakpoint": "^3.0.0-preview.20",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
