--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "lodash.sortby": "^4.7.0",
     "style-loader": "^1.1.3",
     "svg-react-loader": "^0.4.6",
+    "theredoc": "^1.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
