--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.1",
+    "apollo-boost": "^0.4.7",
     "final-form": "^4.18.7",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "local-storage": "^2.0.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
