--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.9.1",
-    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
     "final-form": "^4.18.7",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
